# kaentake

./: .gitignore  .gitmodules
.github/workflows/: release.yml
claude/: README.md  build-e-testes.md  enderecos-v83.md  feature-a-world-map-tooltip.md  feature-b-discord-rpc.md  ida-mcp-workflow.md  plano-integracao.md  riscos-e-pendencias.md
src/: CMakeLists.txt  discordintegration.cpp  discordintegration.h  getwzinfo.cpp  getwzinfo.h  hook.h  iconprovider.cpp  iconprovider.h  worldmapinfo.cpp
src/wvs/: tooltip.h
